Server/src/main/kotlin/com/example/p2p_stock/errors/CardException.kt
package com.example.p2p_stock.errors

class DuplicateCardException(message: String) : RuntimeException(message)
class NotFoundCardException(message: String) : RuntimeException(message)
